Fixed matches info being too wide

--- a/resources/css/sass/pages/_matches.scss
+++ b/resources/css/sass/pages/_matches.scss
@@ -158,6 +158,8 @@ $border-color-dark: #e2e0e1;
     .location {
       position: absolute;
       bottom: 10px;
+      padding-inline: 10px;
+      font-size: 16px;
       color: $text-color-gray;
       line-height: 1.7;
       a{
